--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">chatApp</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Error -->->
+    <string name="text_chat_message_error">Сообщение не отправлено, отсутствует текст</string>
+
+    <!-- Уведомления -->->
+    <string name="shipped">Отправлено</string>
+
 </resources>
